:sparkles: Add user_stories method to project.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -60,3 +60,9 @@ Metrics/LineLength:
   IgnoredPatterns: [
     '^\s*#'
   ]
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Style/SafeNavigation:
+  Enabled: false
