--- a/wercker.yml
+++ b/wercker.yml
@@ -2,6 +2,11 @@ box: ruby:2.4-jessie
 
 build:
     steps:
+        - script:
+            name: Fetch cc-test-reporter
+            code: |
+              curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+              chmod +x ./cc-test-reporter
         - bundle-install:
             jobs: 4
         - script:
@@ -12,7 +17,10 @@ build:
                 echo -p "gem list: $(gem list)"
         - script:
             name: Run Rspec
-            code: bundle exec rake
+            code: |
+              ./cc-test-reporter before-build
+              bundle exec rake
+              ./cc-test-reporter after-build --exit-code $?
     after-steps:
       - wantedly/pretty-slack-notify:
             webhook_url: $SLACK_WEBHOOK_URL
